--- a/src/Pages/Book/FictionNonFicBookContainer/FictionNonFicBookContainer.css
+++ b/src/Pages/Book/FictionNonFicBookContainer/FictionNonFicBookContainer.css
@@ -26,7 +26,7 @@
     border-radius: 3px !important;
 }
 .accrodion-item-4 {
-    background-color: #adc957 !important;
+    background-color: #aeca57 !important;
     font-size: 18px ;
     color: #424242 ;
     margin-bottom: 5px;
