--- a/src/Components/SecondaryProductCard/SecondaryProductCard.css
+++ b/src/Components/SecondaryProductCard/SecondaryProductCard.css
@@ -1,6 +1,18 @@
-.hover-effect:hover{
-    border-radius: 1px;
-background: #ffffff;
-box-shadow: inset 2px 2px 8px #dadada,
-            inset -2px -2px 8px #e0e0e0;
-}
+.details ul li:nth-child(1) {
+    transition:1.0s;
+  }
+  .details ul li:nth-child(2) {
+    transition:1.3s;
+  }
+  .details ul li:nth-child(3) {
+    transition:1.6s;
+  }
+  .details ul li:nth-child(4) {
+    transition:1.9s;
+  }
+  .details ul li:nth-child(5) {
+    transition:2.2s;
+  }
+  .card:hover > .details ul li{
+    bottom:250px;
+  }
